--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -49,11 +49,11 @@ about:
   home: https://gitlab.idiap.ch/software/master-ai-m05-ex6
   license: BSD
   license_family: BSD
-  license_file:
+  license_file: LICENSE
   summary: Basic example of a Reproducible Research Project in Python
-  doc_url:
-  dev_url:
+  doc_url: https://rr.readthedocs.io/en/stable/
+  dev_url: https://gitlab.idiap.ch/software/master-ai-m05-ex6
 
 extra:
   recipe-maintainers:
-    - your-github-id-here
+    - anjos
