--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,36 +6,27 @@ variables:
 stages:
   - build
 
-
-# All stages are prepared the same, with a base set of commands
-.build:
+build:
   stage: build
+  tags:
+    - docker
+  image: continuumio/conda-concourse-ci
   before_script:
+    # download miniconda installer and installs miniconda
     - curl --silent "${BOOTSTRAP}" --output "bootstrap.py"
     - python3 bootstrap.py -vv channel base
     - source ${CONDA_ROOT}/etc/profile.d/conda.sh
     - conda activate base
-  tags:
-    - docker
-  image: continuumio/conda-concourse-ci
   script:
-    - conda build --python=${PYTHON_VERSION} recipe
+    # build and test
+    - conda build --python=3.7 recipe
     - conda convert ${CONDA_ROOT}/conda-bld/linux-64/rr-*.tar.bz2 --platform osx-64 --output ${CONDA_ROOT}/conda-bld
     - conda convert ${CONDA_ROOT}/conda-bld/linux-64/rr-*.tar.bz2 --platform win-64 --output ${CONDA_ROOT}/conda-bld
   after_script:
+    # deployment
     - conda install anaconda-client
     - anaconda -t ${ANACONDA_TOKEN} upload -u ${ANACONDA_USER} ${CONDA_ROOT}/conda-bld/*-64/rr*.tar.bz2 --force
   cache:
+    # this avoids re-downloading the installer at every build
     paths:
       - miniconda.sh
-
-
-linux-py36:
-  extends: .build
-  variables:
-      PYTHON_VERSION: "3.6"
-
-linux-py37:
-  extends: .build
-  variables:
-      PYTHON_VERSION: "3.7"
