--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -23,6 +23,9 @@ jobs:
 
       - name: Build and upload conda package
         shell: bash -l {0}
+        env:
+          ANACONDA_USER: ${{ secrets.ANACONDA_USER }}
+          ANACONDA_TOKEN: ${{ secrets.ANACONDA_TOKEN }}
         run: |
           conda info -a
           conda install conda-build anaconda-client
