[cd] Upload to anaconda.org the "right way"

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -30,5 +30,4 @@ jobs:
           conda info -a
           conda install conda-build anaconda-client
           conda build recipe  #this will also test it!
-          anaconda login --username "${ANACONDA_USER}" --password "${ANACONDA_TOKEN}"
-          anaconda upload --force "${CONDA_PREFIX}"/conda-bld/noarch/rr*.tar.bz2
+          anaconda -t "${ANACONDA_TOKEN}" upload -u "${ANACONDA_USER}" --force "${CONDA_BLD_PATH}"/noarch/rr*.tar.bz2
