--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -23,8 +23,8 @@ requirements:
   run:
     - python >=3.9
     - setuptools
-    - numpy 1.24.1
-    - scipy 1.10.0
+    - numpy >=1.24,<1.25
+    - scipy >=1.10,<1.11
 
 test:
   requires:
