--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -17,7 +17,10 @@ jobs:
       - name: Setup miniconda
         uses: conda-incubator/setup-miniconda@v2
         with:
-          miniconda-version: 'latest'
+          miniforge-variant: Mambaforge
+          use-mamba: true
+          channels: conda-forge
+          channel-priority: true
           auto-update-conda: true
           auto-activate-base: true
 
